src/main/java/com/example/springbootjavaboilerplate/error/exception/BusinessException.java
package com.example.springbootjavaboilerplate.error.exception;

import lombok.Getter;

@Getter
public abstract class BusinessException extends RuntimeException {

}